[Add] Adds new rules were sended later Changed file Hypernyms.ipynb. New rules used in function new_get_hyper.

--- a/hyperonym/Hypernyms.ipynb
+++ b/hyperonym/Hypernyms.ipynb
@@ -122,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7d62da08bf84340884faac851197e03",
+       "model_id": "01ea95d048e54445873091594b9efd1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab3e65d736d7412f9a6fa3ff5bf88b5c",
+       "model_id": "983faaf4b2344488bfc4b38f84c4342c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-12T14:12:54.576104Z",
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-12T14:12:17.173350Z",
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-12T14:14:21.602988Z",
@@ -492,7 +492,7 @@
        "VALUE -> 'S' | 'M' | 'L' | 'XS'\n"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-12T14:14:27.723857Z",
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-12T14:12:19.308726Z",
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-12T14:12:19.323139Z",
@@ -815,28 +815,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "банан [['банан', '—', 'название', 'съедобных', 'плодов'], ['с', 'ботаническои', 'точки', 'зрения', 'банан', 'является', 'ягодои'], ['бананы', '—', 'одна', 'из', 'древнеиших', 'пищевых', 'культур'], ['странах', 'бананы', 'являются', 'одним', 'из']]\n"
+     "ename": "NameError",
+     "evalue": "name 'get_hyper' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-c228a574247b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m drow = {'word':'банан',\n\u001b[1;32m      8\u001b[0m        'text':tx}\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mget_hyper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_hyper' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[['банан', '—', 'название', 'съедобных', 'плодов'],\n",
-       " ['с', 'ботаническои', 'точки', 'зрения', 'банан', 'является', 'ягодои'],\n",
-       " ['бананы', '—', 'одна', 'из', 'древнеиших', 'пищевых', 'культур'],\n",
-       " ['странах', 'бананы', 'являются', 'одним', 'из']]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -853,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +930,7 @@
        "4  https://ru.wikipedia.org/wiki/%D0%9A%D0%BD%D1%...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,6 +1076,233 @@
    ],
    "source": [
     "data['dec_hyper'] = data.apply(lambda row: get_hyper(row), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New rules\n",
+    "\n",
+    "ISARE = or_(\n",
+    "    rule(\n",
+    "        eq('это')\n",
+    "    ),\n",
+    "    rule(\n",
+    "        eq('—')\n",
+    "    ),\n",
+    "    rule(\n",
+    "        eq('—'),\n",
+    "        eq('это')\n",
+    "    ),\n",
+    "    rule(\n",
+    "        eq('—'),\n",
+    "        not_(eq('км'))\n",
+    "    ),\n",
+    "    rule(\n",
+    "        or_(\n",
+    "            eq('и'),\n",
+    "            eq('или'),\n",
+    "        ),\n",
+    "        eq('другие')\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "\n",
+    "ADJP = or_(\n",
+    "    rule(\n",
+    "        gram('ADJF').repeatable(1,3).optional(),\n",
+    "        gram('PREP').optional(),\n",
+    "        gram('PRTF').repeatable(1,3).optional(),\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "NP = rule(\n",
+    "        ADJP.optional().repeatable(1,6),\n",
+    "        gram('NOUN')\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "NOUNPHRASE = or_(\n",
+    "    rule(\n",
+    "        gram('ADJF').repeatable().optional(),\n",
+    "        gram('PRTF').repeatable().optional(),\n",
+    "        gram('NOUN')\n",
+    "\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def new_get_hyper(row):\n",
+    "    main_word = row['word']\n",
+    "    text = row['text']\n",
+    "    \n",
+    "    HYPONYM = eq(utils.deaccent(main_word.lower()))\n",
+    "    RULE = or_(\n",
+    "        rule(HYPONYM, ISARE, NP)\n",
+    "    )\n",
+    "    parser = Parser(RULE) \n",
+    "    text = utils.deaccent(text)\n",
+    "    # print(text)\n",
+    "    text = re.sub(r'\\(.+?\\)', '', text)\n",
+    "    text = text.lower().replace('* сергии радонежскии* ', '')\n",
+    "    hyps = []\n",
+    "    for idx, match in enumerate(parser.findall(text.lower())):\n",
+    "        k = [_.value for _ in match.tokens]\n",
+    "        hyps.append(k)\n",
+    "    print(main_word, hyps)\n",
+    "    return hyps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "КНУТ []\n",
+      "КНУТ []\n",
+      "КНУТ []\n",
+      "КНУТ []\n",
+      "КНУТ [['кнут', '—', 'американскии', 'ученыи']]\n",
+      "КНЯЖЕНИЕ [['княжение', 'это', 'историческии']]\n",
+      "КНЯЖЕНИЕ [['княжение', 'это', 'процесс']]\n",
+      "КНЯЖЕНИЕ []\n",
+      "КНЯЖЕНИЕ []\n",
+      "КНЯЖЕНИЕ [['княжение', 'это', 'состояние']]\n",
+      "КОБЗА [['кобза', '—', 'украинскии', 'лютнеподобныи']]\n",
+      "КОБЗА []\n",
+      "КОБЗА []\n",
+      "КОБЗА []\n",
+      "КОБЗА []\n",
+      "КОБЗАРЬ []\n",
+      "КОБЗАРЬ []\n",
+      "КОБЗАРЬ []\n",
+      "КОБЗАРЬ []\n",
+      "КОБЗАРЬ []\n",
+      "КОВРИЖКА [['коврижка', '—', 'плоское', 'и']]\n",
+      "КОВРИЖКА [['коврижка', '—', 'изделие', 'из', 'пряничного', 'теста']]\n",
+      "КОВРИЖКА [['коврижка', '—', 'плоское', 'и']]\n",
+      "КОВРИЖКА [['коврижка', '—', 'изделие', 'из', 'пряничного', 'теста']]\n",
+      "КОВРИЖКА [['коврижка', '—', 'изделие', 'из', 'пряничного', 'теста']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растении']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растении']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растении']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растении']]\n",
+      "КОВЫЛЬ []\n",
+      "КОЖГАЛАНТЕРЕЯ []\n",
+      "КОЖГАЛАНТЕРЕЯ []\n",
+      "КОЖГАЛАНТЕРЕЯ []\n",
+      "КОЖГАЛАНТЕРЕЯ []\n",
+      "КОЖГАЛАНТЕРЕЯ []\n",
+      "КОЖЗАМЕНИТЕЛЬ []\n",
+      "КОЖЗАМЕНИТЕЛЬ []\n",
+      "КОЖЗАМЕНИТЕЛЬ [['кожзаменитель', 'это', 'полимер']]\n",
+      "КОЖЗАМЕНИТЕЛЬ [['кожзаменитель', 'это', 'полимер']]\n",
+      "КОЖЗАМЕНИТЕЛЬ [['кожзаменитель', 'это', 'полимер']]\n",
+      "КОЗЛЯТИНА []\n",
+      "КОЗЛЯТИНА []\n",
+      "КОЗЛЯТИНА []\n",
+      "КОЗЛЯТИНА [['козлятина', 'это', 'мясо']]\n",
+      "КОЗЛЯТИНА []\n",
+      "КОЗОВОД [['козовод', 'это', 'животновод']]\n",
+      "КОЗОВОД []\n",
+      "КОЗОВОД [['козовод', 'это', 'человек']]\n",
+      "КОЗОВОД []\n",
+      "КОЗОВОД []\n",
+      "КОЛЕНКОР []\n",
+      "КОЛЕНКОР [['коленкор', '—', 'переплетныи', 'материал']]\n",
+      "КОЛЕНКОР []\n",
+      "КОЛЕНКОР [['коленкор', '—', 'переплетныи', 'материал']]\n",
+      "КОЛЕНКОР []\n",
+      "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
+      "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
+      "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
+      "КОЛЕНОПРЕКЛОНЕНИЕ [['коленопреклонение', 'это', 'деиствие']]\n",
+      "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
+      "КОЛЛОКВИУМ [['коллоквиум', '—', 'форма', 'проверки']]\n",
+      "КОЛЛОКВИУМ []\n",
+      "КОЛЛОКВИУМ [['коллоквиум', '—', 'форма', 'проверки']]\n",
+      "КОЛЛОКВИУМ []\n",
+      "КОЛЛОКВИУМ []\n",
+      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинскии', 'эндоскопическии']]\n",
+      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинскии', 'эндоскопическии']]\n",
+      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинскии', 'эндоскопическии']]\n",
+      "КОЛОНОСКОПИЯ []\n",
+      "КОЛОНОСКОПИЯ []\n",
+      "КОЛУМБАРИЙ []\n",
+      "КОЛУМБАРИЙ []\n",
+      "КОЛУМБАРИЙ [['колумбарии', '—', 'хранилище', 'урн']]\n",
+      "КОЛУМБАРИЙ []\n",
+      "КОЛУМБАРИЙ [['колумбарии', 'это', 'кладбище']]\n",
+      "КОЛЫМАГА []\n",
+      "КОЛЫМАГА [['колымага', '—', 'использовавшаяся', 'тюркскими', 'кочевниками']]\n",
+      "КОЛЫМАГА []\n",
+      "КОЛЫМАГА []\n",
+      "КОЛЫМАГА []\n",
+      "КОМБАТАНТ [['комбатант', '—', 'лицо']]\n",
+      "КОМБАТАНТ [['комбатант', 'это', 'участник']]\n",
+      "КОМБАТАНТ []\n",
+      "КОМБАТАНТ []\n",
+      "КОМБАТАНТ []\n",
+      "КОМБИНАТОРИКА [['комбинаторика', '—', 'раздел', 'математики']]\n",
+      "КОМБИНАТОРИКА []\n",
+      "КОМБИНАТОРИКА [['комбинаторика', 'это', 'совокупность']]\n",
+      "КОМБИНАТОРИКА [['комбинаторика', '—', 'это', 'своиство']]\n",
+      "КОМБИНАТОРИКА []\n",
+      "КОМЕДИОГРАФ []\n",
+      "КОМЕДИОГРАФ []\n",
+      "КОМЕДИОГРАФ []\n",
+      "КОМЕДИОГРАФ []\n",
+      "КОМЕДИОГРАФ []\n",
+      "КОМЕНДОР [['комендор', '—', 'матрос']]\n",
+      "КОМЕНДОР []\n",
+      "КОМЕНДОР [['комендор', '—', 'матрос']]\n",
+      "КОМЕНДОР [['комендор', '—', 'матрос']]\n",
+      "КОМЕНДОР []\n",
+      "КОМИТЕНТ []\n",
+      "КОМИТЕНТ [['комитент', '—', 'сторона', 'в', 'договоре']]\n",
+      "КОМИТЕНТ [['комитент', 'это', 'участник']]\n",
+      "КОМИТЕНТ [['комитент', 'это', 'принципал']]\n",
+      "КОМИТЕНТ [['комитент', 'это', 'потребитель']]\n",
+      "КОМКОР [['комкор', '—', 'воинское', 'звание']]\n",
+      "КОМКОР [['комкор', '—', 'офицер', 'высшего', 'командного', 'состава']]\n",
+      "КОМКОР []\n",
+      "КОМКОР []\n",
+      "КОМКОР [['комкор', '—', 'военачальник']]\n",
+      "КОНВЕКТОР [['конвектор', '—', 'отопительныи', 'прибор']]\n",
+      "КОНВЕКТОР [['конвектор', '—', 'отопительныи', 'прибор']]\n",
+      "КОНВЕКТОР []\n",
+      "КОНВЕКТОР []\n",
+      "КОНВЕКТОР []\n",
+      "КОНВЕКЦИЯ []\n",
+      "КОНВЕКЦИЯ []\n",
+      "КОНВЕКЦИЯ [['конвекция', '—', 'вид', 'теплообмена']]\n",
+      "КОНВЕКЦИЯ [['конвекция', 'это', 'процесс']]\n",
+      "КОНВЕКЦИЯ [['конвекция', 'это', 'способ']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data['dec_hyper'] = data.apply(lambda row: new_get_hyper(row), axis=1)"
    ]
   },
   {
