[Mod] Add to hyperonyms file yargytest content Adds new rules from yargytest file and apply it to the dataset.

--- a/hyperonym/Hypernyms.ipynb
+++ b/hyperonym/Hypernyms.ipynb
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1182,13 +1182,13 @@
       "КНУТ []\n",
       "КНУТ []\n",
       "КНУТ []\n",
-      "КНУТ [['кнут', '—', 'американскии', 'ученыи']]\n",
-      "КНЯЖЕНИЕ [['княжение', 'это', 'историческии']]\n",
+      "КНУТ [['кнут', '—', 'американский', 'учёный', 'в', 'области']]\n",
+      "КНЯЖЕНИЕ []\n",
       "КНЯЖЕНИЕ [['княжение', 'это', 'процесс']]\n",
       "КНЯЖЕНИЕ []\n",
       "КНЯЖЕНИЕ []\n",
       "КНЯЖЕНИЕ [['княжение', 'это', 'состояние']]\n",
-      "КОБЗА [['кобза', '—', 'украинскии', 'лютнеподобныи']]\n",
+      "КОБЗА []\n",
       "КОБЗА []\n",
       "КОБЗА []\n",
       "КОБЗА []\n",
@@ -1203,10 +1203,10 @@
       "КОВРИЖКА [['коврижка', '—', 'плоское', 'и']]\n",
       "КОВРИЖКА [['коврижка', '—', 'изделие', 'из', 'пряничного', 'теста']]\n",
       "КОВРИЖКА [['коврижка', '—', 'изделие', 'из', 'пряничного', 'теста']]\n",
-      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растении']]\n",
-      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растении']]\n",
-      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растении']]\n",
-      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растении']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растений']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растений']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растений']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растений']]\n",
       "КОВЫЛЬ []\n",
       "КОЖГАЛАНТЕРЕЯ []\n",
       "КОЖГАЛАНТЕРЕЯ []\n",
@@ -1229,30 +1229,30 @@
       "КОЗОВОД []\n",
       "КОЗОВОД []\n",
       "КОЛЕНКОР []\n",
-      "КОЛЕНКОР [['коленкор', '—', 'переплетныи', 'материал']]\n",
+      "КОЛЕНКОР [['коленкор', '—', 'переплётный', 'материал']]\n",
       "КОЛЕНКОР []\n",
-      "КОЛЕНКОР [['коленкор', '—', 'переплетныи', 'материал']]\n",
+      "КОЛЕНКОР [['коленкор', '—', 'переплётный', 'материал']]\n",
       "КОЛЕНКОР []\n",
       "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
       "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
       "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
-      "КОЛЕНОПРЕКЛОНЕНИЕ [['коленопреклонение', 'это', 'деиствие']]\n",
+      "КОЛЕНОПРЕКЛОНЕНИЕ [['коленопреклонение', 'это', 'действие']]\n",
       "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
       "КОЛЛОКВИУМ [['коллоквиум', '—', 'форма', 'проверки']]\n",
       "КОЛЛОКВИУМ []\n",
       "КОЛЛОКВИУМ [['коллоквиум', '—', 'форма', 'проверки']]\n",
       "КОЛЛОКВИУМ []\n",
       "КОЛЛОКВИУМ []\n",
-      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинскии', 'эндоскопическии']]\n",
-      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинскии', 'эндоскопическии']]\n",
-      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинскии', 'эндоскопическии']]\n",
+      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинский', 'эндоскопический', 'диагностический', 'метод']]\n",
+      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинский', 'эндоскопический', 'диагностический', 'метод']]\n",
+      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинский', 'эндоскопический', 'диагностический', 'метод']]\n",
       "КОЛОНОСКОПИЯ []\n",
       "КОЛОНОСКОПИЯ []\n",
       "КОЛУМБАРИЙ []\n",
       "КОЛУМБАРИЙ []\n",
-      "КОЛУМБАРИЙ [['колумбарии', '—', 'хранилище', 'урн']]\n",
+      "КОЛУМБАРИЙ [['колумбарий', '—', 'хранилище', 'урн']]\n",
       "КОЛУМБАРИЙ []\n",
-      "КОЛУМБАРИЙ [['колумбарии', 'это', 'кладбище']]\n",
+      "КОЛУМБАРИЙ [['колумбарий', 'это', 'кладбище']]\n",
       "КОЛЫМАГА []\n",
       "КОЛЫМАГА [['колымага', '—', 'использовавшаяся', 'тюркскими', 'кочевниками']]\n",
       "КОЛЫМАГА []\n",
@@ -1266,7 +1266,7 @@
       "КОМБИНАТОРИКА [['комбинаторика', '—', 'раздел', 'математики']]\n",
       "КОМБИНАТОРИКА []\n",
       "КОМБИНАТОРИКА [['комбинаторика', 'это', 'совокупность']]\n",
-      "КОМБИНАТОРИКА [['комбинаторика', '—', 'это', 'своиство']]\n",
+      "КОМБИНАТОРИКА [['комбинаторика', '—', 'это', 'свойство']]\n",
       "КОМБИНАТОРИКА []\n",
       "КОМЕДИОГРАФ []\n",
       "КОМЕДИОГРАФ []\n",
@@ -1288,8 +1288,8 @@
       "КОМКОР []\n",
       "КОМКОР []\n",
       "КОМКОР [['комкор', '—', 'военачальник']]\n",
-      "КОНВЕКТОР [['конвектор', '—', 'отопительныи', 'прибор']]\n",
-      "КОНВЕКТОР [['конвектор', '—', 'отопительныи', 'прибор']]\n",
+      "КОНВЕКТОР [['конвектор', '—', 'отопительный', 'прибор']]\n",
+      "КОНВЕКТОР [['конвектор', '—', 'отопительный', 'прибор']]\n",
       "КОНВЕКТОР []\n",
       "КОНВЕКТОР []\n",
       "КОНВЕКТОР []\n",
@@ -1303,6 +1303,169 @@
    ],
    "source": [
     "data['dec_hyper'] = data.apply(lambda row: new_get_hyper(row), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def new_with_get_hyper(row):\n",
+    "    main_word = row['word']\n",
+    "    text = row['text']\n",
+    "    \n",
+    "    HYPONYM = eq(main_word.lower())\n",
+    "    RULE = or_(\n",
+    "        rule(HYPONYM, ISARE, NP)\n",
+    "    )\n",
+    "    parser = Parser(RULE) \n",
+    "    \n",
+    "    # print(text)\n",
+    "    text = re.sub(r'\\(.+?\\)', '', text)\n",
+    "    text = text.lower().replace('* сергии радонежскии* ', '')\n",
+    "    hyps = []\n",
+    "    for idx, match in enumerate(parser.findall(text.lower())):\n",
+    "        k = [_.value for _ in match.tokens]\n",
+    "        hyps.append(k)\n",
+    "    print(main_word, hyps)\n",
+    "    return hyps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "КНУТ []\n",
+      "КНУТ []\n",
+      "КНУТ []\n",
+      "КНУТ []\n",
+      "КНУТ [['кнут', '—', 'американский', 'учёный', 'в', 'области']]\n",
+      "КНЯЖЕНИЕ []\n",
+      "КНЯЖЕНИЕ [['княжение', 'это', 'процесс']]\n",
+      "КНЯЖЕНИЕ []\n",
+      "КНЯЖЕНИЕ []\n",
+      "КНЯЖЕНИЕ [['княжение', 'это', 'состояние']]\n",
+      "КОБЗА []\n",
+      "КОБЗА []\n",
+      "КОБЗА []\n",
+      "КОБЗА []\n",
+      "КОБЗА []\n",
+      "КОБЗАРЬ []\n",
+      "КОБЗАРЬ []\n",
+      "КОБЗАРЬ []\n",
+      "КОБЗАРЬ []\n",
+      "КОБЗАРЬ []\n",
+      "КОВРИЖКА [['коврижка', '—', 'плоское', 'и']]\n",
+      "КОВРИЖКА [['коврижка', '—', 'изделие', 'из', 'пряничного', 'теста']]\n",
+      "КОВРИЖКА [['коврижка', '—', 'плоское', 'и']]\n",
+      "КОВРИЖКА [['коврижка', '—', 'изделие', 'из', 'пряничного', 'теста']]\n",
+      "КОВРИЖКА [['коврижка', '—', 'изделие', 'из', 'пряничного', 'теста']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растений']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растений']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растений']]\n",
+      "КОВЫЛЬ [['ковыль', '—', 'род', 'многолетних', 'однодольных', 'травянистых', 'растений']]\n",
+      "КОВЫЛЬ []\n",
+      "КОЖГАЛАНТЕРЕЯ []\n",
+      "КОЖГАЛАНТЕРЕЯ []\n",
+      "КОЖГАЛАНТЕРЕЯ []\n",
+      "КОЖГАЛАНТЕРЕЯ []\n",
+      "КОЖГАЛАНТЕРЕЯ []\n",
+      "КОЖЗАМЕНИТЕЛЬ []\n",
+      "КОЖЗАМЕНИТЕЛЬ []\n",
+      "КОЖЗАМЕНИТЕЛЬ [['кожзаменитель', 'это', 'полимер']]\n",
+      "КОЖЗАМЕНИТЕЛЬ [['кожзаменитель', 'это', 'полимер']]\n",
+      "КОЖЗАМЕНИТЕЛЬ [['кожзаменитель', 'это', 'полимер']]\n",
+      "КОЗЛЯТИНА []\n",
+      "КОЗЛЯТИНА []\n",
+      "КОЗЛЯТИНА []\n",
+      "КОЗЛЯТИНА [['козлятина', 'это', 'мясо']]\n",
+      "КОЗЛЯТИНА []\n",
+      "КОЗОВОД [['козовод', 'это', 'животновод']]\n",
+      "КОЗОВОД []\n",
+      "КОЗОВОД [['козовод', 'это', 'человек']]\n",
+      "КОЗОВОД []\n",
+      "КОЗОВОД []\n",
+      "КОЛЕНКОР []\n",
+      "КОЛЕНКОР [['коленкор', '—', 'переплётный', 'материал']]\n",
+      "КОЛЕНКОР []\n",
+      "КОЛЕНКОР [['коленкор', '—', 'переплётный', 'материал']]\n",
+      "КОЛЕНКОР []\n",
+      "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
+      "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
+      "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
+      "КОЛЕНОПРЕКЛОНЕНИЕ [['коленопреклонение', 'это', 'действие']]\n",
+      "КОЛЕНОПРЕКЛОНЕНИЕ []\n",
+      "КОЛЛОКВИУМ [['коллоквиум', '—', 'форма', 'проверки']]\n",
+      "КОЛЛОКВИУМ []\n",
+      "КОЛЛОКВИУМ [['коллоквиум', '—', 'форма', 'проверки']]\n",
+      "КОЛЛОКВИУМ []\n",
+      "КОЛЛОКВИУМ []\n",
+      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинский', 'эндоскопический', 'диагностический', 'метод']]\n",
+      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинский', 'эндоскопический', 'диагностический', 'метод']]\n",
+      "КОЛОНОСКОПИЯ [['колоноскопия', '—', 'медицинский', 'эндоскопический', 'диагностический', 'метод']]\n",
+      "КОЛОНОСКОПИЯ []\n",
+      "КОЛОНОСКОПИЯ []\n",
+      "КОЛУМБАРИЙ []\n",
+      "КОЛУМБАРИЙ []\n",
+      "КОЛУМБАРИЙ [['колумбарий', '—', 'хранилище', 'урн']]\n",
+      "КОЛУМБАРИЙ []\n",
+      "КОЛУМБАРИЙ [['колумбарий', 'это', 'кладбище']]\n",
+      "КОЛЫМАГА []\n",
+      "КОЛЫМАГА [['колымага', '—', 'использовавшаяся', 'тюркскими', 'кочевниками']]\n",
+      "КОЛЫМАГА []\n",
+      "КОЛЫМАГА []\n",
+      "КОЛЫМАГА []\n",
+      "КОМБАТАНТ [['комбатант', '—', 'лицо']]\n",
+      "КОМБАТАНТ [['комбатант', 'это', 'участник']]\n",
+      "КОМБАТАНТ []\n",
+      "КОМБАТАНТ []\n",
+      "КОМБАТАНТ []\n",
+      "КОМБИНАТОРИКА [['комбинаторика', '—', 'раздел', 'математики']]\n",
+      "КОМБИНАТОРИКА []\n",
+      "КОМБИНАТОРИКА [['комбинаторика', 'это', 'совокупность']]\n",
+      "КОМБИНАТОРИКА [['комбинаторика', '—', 'это', 'свойство']]\n",
+      "КОМБИНАТОРИКА []\n",
+      "КОМЕДИОГРАФ []\n",
+      "КОМЕДИОГРАФ []\n",
+      "КОМЕДИОГРАФ []\n",
+      "КОМЕДИОГРАФ []\n",
+      "КОМЕДИОГРАФ []\n",
+      "КОМЕНДОР [['комендор', '—', 'матрос']]\n",
+      "КОМЕНДОР []\n",
+      "КОМЕНДОР [['комендор', '—', 'матрос']]\n",
+      "КОМЕНДОР [['комендор', '—', 'матрос']]\n",
+      "КОМЕНДОР []\n",
+      "КОМИТЕНТ []\n",
+      "КОМИТЕНТ [['комитент', '—', 'сторона', 'в', 'договоре']]\n",
+      "КОМИТЕНТ [['комитент', 'это', 'участник']]\n",
+      "КОМИТЕНТ [['комитент', 'это', 'принципал']]\n",
+      "КОМИТЕНТ [['комитент', 'это', 'потребитель']]\n",
+      "КОМКОР [['комкор', '—', 'воинское', 'звание']]\n",
+      "КОМКОР [['комкор', '—', 'офицер', 'высшего', 'командного', 'состава']]\n",
+      "КОМКОР []\n",
+      "КОМКОР []\n",
+      "КОМКОР [['комкор', '—', 'военачальник']]\n",
+      "КОНВЕКТОР [['конвектор', '—', 'отопительный', 'прибор']]\n",
+      "КОНВЕКТОР [['конвектор', '—', 'отопительный', 'прибор']]\n",
+      "КОНВЕКТОР []\n",
+      "КОНВЕКТОР []\n",
+      "КОНВЕКТОР []\n",
+      "КОНВЕКЦИЯ []\n",
+      "КОНВЕКЦИЯ []\n",
+      "КОНВЕКЦИЯ [['конвекция', '—', 'вид', 'теплообмена']]\n",
+      "КОНВЕКЦИЯ [['конвекция', 'это', 'процесс']]\n",
+      "КОНВЕКЦИЯ [['конвекция', 'это', 'способ']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data['dec_hyper'] = data.apply(lambda row: new_with_get_hyper(row), axis=1)"
    ]
   },
   {
