[Add,Mod] Add ROUGE-2 metrics to Lab6_Summarization Apply ROUGE-2 to example_texts.json dataset.

--- a/Lab6_Summarization/Lab6_Summarization.ipynb
+++ b/Lab6_Summarization/Lab6_Summarization.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "'\\nFunctions for Dataframe changing: end\\n'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,6 +340,229 @@
    "source": [
     "df_jsexample.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ROUG metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rouge import Rouge \n",
+    "\n",
+    "def rouge_df(row):\n",
+    "    hypothesis = row['summary_text']\n",
+    "    reference = row['ref_text']\n",
+    "    rouge = Rouge()\n",
+    "    scores = rouge.get_scores(hypothesis, reference)\n",
+    "    \n",
+    "    return scores[0]['rouge-2']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "summary: как пишет yomiuri , группе сотрудников отделения нейроинформатики международного исследовательского института передовых средств коммуникации ( киото , япония ) удалось восстановить изображение , увиденное человеком , опираясь только на сканирование электрических сигналов мозга . \n",
+      "\n",
+      "summary: в настоящее время вытеснен более совершенными и безопасными для человека пиретроидами . \n",
+      "\n",
+      "summary: киев идет на уступки : яценюк передает власть на местах советам украинские власти обещают сохранить двуязычие на востоке страны .\n",
+      "исполняющий обязанности главы кабинета министров украины арсений яценюк пошел на серьезные уступки участникам протеста на востоке страны . \n",
+      "\n",
+      "summary: пока борис немцов подсчитывал разницу между стоимостью строительства 4-го транспортного кольца и большого адронного коллайдера , юрий михайлович сообщил , что количество российских чиновников превышает 1 млн человек и в три с лишним раза превосходит по численности сухопутные войска рф .\n",
+      "убеждён , что с такими итогами работы мэр москвы должен быть немедленно отправлен в отставку , а бурная бизнес-деятельность его жены и роль лужкова в этой деятельности должны быть тщательно расследованы и преданы гласности .\n",
+      "zt : « немыслим честный доклад о деятельности юрия лужкова за 17 лет его пребывания во главе москвы , не констатирующий , что за это время « крепкий хозяйственник » успел побыть и оппонентом , и партнёром всех крупных российских бизнес-структур первого уровня .\n",
+      "честный разговор о лужкове ― это прежде всего история о том , как мэра признали достойным партнёром все участники российского списка forbes .\n",
+      "а что рядовой и не очень рядовой избиратель во всём мире , всегда и всюду , атрибутирует экономические успехи и недостатки текущим правителям ― это факт известный .\n",
+      "что лучше для рядового избирателя : с отвращением относиться к лужкову и единой россии или нести ответственность за других политиков ?\n",
+      "ему нужно , чтобы его снова обманули , и в этот раз так же , как и в прошлый .\n",
+      "лужков все обвинения в свой адрес отрицает , утверждая , что елена батурина — « крепкий предприниматель » и своё состояние заработала без его помощи .\n",
+      "но надо же их как-то использовать на благо тех , кто всё это добро своими ручками для них построил , разработал , разведал и освоил !\n",
+      "это , конечно , случайное совпадение , как и в паре лужков — батурина . \n",
+      "\n",
+      "summary: закончим , как и положено : &quot; на основании изложенного , и руководствуясь статьями ( теми , которые регламентируют порядок заявления ходатайтсва , в общем ) , &quot; и потом , по центру : &quot; ходатайствую &quot; , и изложение просьбы : уголовное дело прекратить , все изъятое при обыске вернуть , и т .\n",
+      "потому что все пишут обычно на двойном тетрадном листочке ( когда его подшиваешь в дело , он оказывается длиннее листа а4 , и край приходится подгибать ) , и ( иногда ) -- такое ( как , например , пенсионерка тютюник : раз , два ) . \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for st in df_jsexample['summary_text']:\n",
+    "    print('summary:',st,'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "129\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>orig_word_count</th>\n",
+       "      <th>clean_text</th>\n",
+       "      <th>summary_text</th>\n",
+       "      <th>sum_word_count</th>\n",
+       "      <th>ref_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Увидеть мысль\\n\\nЯпонским ученым удалось распо...</td>\n",
+       "      <td>155</td>\n",
+       "      <td>увидеть мысль японским ученым удалось распозна...</td>\n",
+       "      <td>как пишет yomiuri , группе сотрудников отделен...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>группе учённых удалось восстановить изображени...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Карбофос\\n\\nКарбофос ( O , O - Диметил - S - (...</td>\n",
+       "      <td>131</td>\n",
+       "      <td>карбофос карбофос ( o , o - диметил - s - ( 1,...</td>\n",
+       "      <td>в настоящее время вытеснен более совершенными ...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Карбофос — фосфорорганическое соединение , инс...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Киев идет на уступки : Яценюк передает власть ...</td>\n",
+       "      <td>282</td>\n",
+       "      <td>киев идет на уступки : яценюк передает власть ...</td>\n",
+       "      <td>киев идет на уступки : яценюк передает власть ...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>Исполняющий обязанности главы кабинета министр...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>« Лужков . Итоги »\\nКонец эры хозяйственника и...</td>\n",
+       "      <td>2772</td>\n",
+       "      <td>« лужков . итоги » конец эры хозяйственника ил...</td>\n",
+       "      <td>пока борис немцов подсчитывал разницу между ст...</td>\n",
+       "      <td>279</td>\n",
+       "      <td>Опубликованный доклад Бориса Немцова « Лужков ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>... в ходе написания ходатайства : сделать его...</td>\n",
+       "      <td>323</td>\n",
+       "      <td>... в ходе написания ходатайства : сделать его...</td>\n",
+       "      <td>закончим , как и положено : &amp;quot; на основани...</td>\n",
+       "      <td>110</td>\n",
+       "      <td>в ходе написания ходатайства : сделать его по ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   0  orig_word_count  \\\n",
+       "0  Увидеть мысль\\n\\nЯпонским ученым удалось распо...              155   \n",
+       "1  Карбофос\\n\\nКарбофос ( O , O - Диметил - S - (...              131   \n",
+       "2  Киев идет на уступки : Яценюк передает власть ...              282   \n",
+       "3  « Лужков . Итоги »\\nКонец эры хозяйственника и...             2772   \n",
+       "4  ... в ходе написания ходатайства : сделать его...              323   \n",
+       "\n",
+       "                                          clean_text  \\\n",
+       "0  увидеть мысль японским ученым удалось распозна...   \n",
+       "1  карбофос карбофос ( o , o - диметил - s - ( 1,...   \n",
+       "2  киев идет на уступки : яценюк передает власть ...   \n",
+       "3  « лужков . итоги » конец эры хозяйственника ил...   \n",
+       "4  ... в ходе написания ходатайства : сделать его...   \n",
+       "\n",
+       "                                        summary_text  sum_word_count  \\\n",
+       "0  как пишет yomiuri , группе сотрудников отделен...              34   \n",
+       "1  в настоящее время вытеснен более совершенными ...              12   \n",
+       "2  киев идет на уступки : яценюк передает власть ...              38   \n",
+       "3  пока борис немцов подсчитывал разницу между ст...             279   \n",
+       "4  закончим , как и положено : &quot; на основани...             110   \n",
+       "\n",
+       "                                            ref_text  \n",
+       "0  группе учённых удалось восстановить изображени...  \n",
+       "1  Карбофос — фосфорорганическое соединение , инс...  \n",
+       "2  Исполняющий обязанности главы кабинета министр...  \n",
+       "3  Опубликованный доклад Бориса Немцова « Лужков ...  \n",
+       "4  в ходе написания ходатайства : сделать его по ...  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "references = []\n",
+    "references.append(\"группе учённых удалось восстановить изображение , увиденное человеком , опираясь только на сканирование электрических сигналов мозга. На основе сравнения предыдущей серии изображений и показаний сканера исследователям удалось правильно реконструировать новые изображения по сигналам мозговой активности . Работа японских ученых — большой шаг на пути реализации идеи прямого человеко-машинного интерфейса .\")\n",
+    "references.append(\"Карбофос — фосфорорганическое соединение , инсектицид широкого спектра действия , акарицид . Применялся против комаров , мух , клещей , клопов , паразитов , повреждающих фруктовые деревья , овощные и декоративные растения . В настоящее время вытеснен более совершенными и безопасными для человека пиретроидами . Препараты на основе карбофоса остаются одними из самых эффективных средств борьбы против постельных клопов , весьма слабо чувствительных к прочим инсектицидам .\")\n",
+    "references.append(\"Исполняющий обязанности главы кабинета министров Украины Арсений Яценюк пошел на серьезные уступки участникам протеста на востоке страны .На переговорах с главой МВД Арсеном Аваковым и Ринатом Ахметовым в Донецке он предложил серьезно расширить полномочия местных органов власти . Глава правительства считает необходимым ликвидировать областные государственные администрации , назначаемые президентом Украины . По его мнению , управлять территориями на местах должны исполкомы , которые будут избираться Областными советами . Глава правительства пообещал не отменять закон Колесниченко - Кивалова , от 5 июня 2012 года , позволявший использовать региональные языки . Цель переговоров в Донецке - разрешить кризис в регионе .Областная администрация Донецка по-прежнему находится в руках людей , объявивших в понедельник 7 апреля о создании Донецкой народной республики .\")\n",
+    "references.append(\"Опубликованный доклад Бориса Немцова « Лужков . Итоги » вызвал немалый шум среди общественности . Мэр города Москвы сделал заявление о том , что одной из важнейших задач в деле модернизации России должно стать сокращение чиновничьего аппарата . Леонид Городин в liberalizm : Дело не в том , чтобы демонстративно наказывать « негодяя » , а в том , чтобы менять систему . Лужков ― производное люмпенов . Это мэр люмпенов . нормальным гражданам не нужен Лужков .\")\n",
+    "references.append(\"в ходе написания ходатайства : сделать его по образцу следственных постановлений из УПК . То есть , после заголовка -- вводную : я , подозреваемый по уголовному делу № ... , Пупкин В . В . , рассмотрев материалы уголовного дела № ...  , потом по центру  установил  , а потом -- изложение ходатайства . и изложение просьбы : уголовное дело прекратить , все изъятое при обыске вернуть , и т . п . Следователя , который получит такое ходатайство , должен неминуемо хватить Кондратий . И еще , если ходатайство из СИЗО , там в конце обычно приписка : В моей прозьбе прошу не отказать . А еще читал где-то в Фидо товарища , который для переписок с Государством сделал себе угловой штамп  типа как в ГОСТе.\")\n",
+    "print(simpleword_count(references[4]))\n",
+    "df_jsexample[\"ref_text\"] = pd.Series(references)\n",
+    "df_jsexample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_jsexample['sum_word_count'] = df_jsexample.apply(lambda row: summary_word_count_df(row), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -815,7 +1038,7 @@
     "# output file can be read only with pandas. \n",
     "# example of encoded string [\"\\u0412 \\u0421\\u0435\\u0440\\u0431\\u0438\\u0438\n",
     "# How to encode russian text properly in json?\n",
-    "out_dataset.to_json('outdataset_43428_1.txt', orient='values')"
+    "#out_dataset.to_json('outdataset_43428_1.txt', orient='values')"
    ]
   },
   {
@@ -824,7 +1047,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dataset.to_csv('outdataset_43428_1.csv',header=False, index=False)"
+    "#out_dataset.to_csv('outdataset_43428_1.csv',header=False, index=False)"
    ]
   },
   {
